--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,20 @@ services:
     volumes:
       - .:/usr/src/app
     command: go run ./cmd/api -b 0.0.0.0
+  
+  postgres:
+    image: "postgres:14.5"
+    restart: always
+    environment:
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTRES_DB: ${PG_DB}
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      - ./sql/initialize.sql:/docker-entrypoint-initdb.d/create_tables.sql
